fix test code warnings, e.g. wrong order in assertEquals, unreliable use of BigDecimal constructor, wrong use of block comments
(cherry picked from commit e0331de3eefc6947d4d71c2516bca0861ca8aae9)